--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "homepage": "https://github.com/KarynH/Closet-NARo-backend#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.2.0",
+    "mongoose": "^7.2.1",
     "nodemon": "^2.0.22"
   }
 }
